fix 404 pages and layout shifting

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -688,8 +688,8 @@ code:not(.code-highlight code) {
   left: -26px;
 }
 
-.bottom-0 {
-  bottom: 0px;
+.z-\[200\] {
+  z-index: 200;
 }
 
 .z-\[50\] {
@@ -698,10 +698,6 @@ code:not(.code-highlight code) {
 
 .z-\[100\] {
   z-index: 100;
-}
-
-.z-\[200\] {
-  z-index: 200;
 }
 
 .m-0 {
@@ -821,6 +817,22 @@ code:not(.code-highlight code) {
   margin-bottom: 0.75rem;
 }
 
+.mt-\[10px\] {
+  margin-top: 10px;
+}
+
+.mb-\[10px\] {
+  margin-bottom: 10px;
+}
+
+.mb-\[5px\] {
+  margin-bottom: 5px;
+}
+
+.mb-\[6px\] {
+  margin-bottom: 6px;
+}
+
 .block {
   display: block;
 }
@@ -845,6 +857,11 @@ code:not(.code-highlight code) {
   height: 100%;
 }
 
+.h-max {
+  height: -moz-max-content;
+  height: max-content;
+}
+
 .h-8 {
   height: 2rem;
 }
@@ -861,11 +878,6 @@ code:not(.code-highlight code) {
   height: calc(100vh - 128px);
 }
 
-.h-max {
-  height: -moz-max-content;
-  height: max-content;
-}
-
 .min-h-full {
   min-height: 100%;
 }
@@ -880,6 +892,11 @@ code:not(.code-highlight code) {
 
 .w-32 {
   width: 8rem;
+}
+
+.w-max {
+  width: -moz-max-content;
+  width: max-content;
 }
 
 .w-8 {
@@ -904,11 +921,6 @@ code:not(.code-highlight code) {
 
 .w-2 {
   width: 0.5rem;
-}
-
-.w-max {
-  width: -moz-max-content;
-  width: max-content;
 }
 
 .min-w-full {
@@ -1009,16 +1021,16 @@ code:not(.code-highlight code) {
   gap: 1rem;
 }
 
+.gap-8 {
+  gap: 2rem;
+}
+
 .gap-6 {
   gap: 1.5rem;
 }
 
 .gap-3 {
   gap: 0.75rem;
-}
-
-.gap-8 {
-  gap: 2rem;
 }
 
 .overflow-hidden {
@@ -1073,12 +1085,12 @@ code:not(.code-highlight code) {
   border-left-width: 2px;
 }
 
-.border-l-\[3px\] {
-  border-left-width: 3px;
-}
-
 .border-t-2 {
   border-top-width: 2px;
+}
+
+.border-l-\[3px\] {
+  border-left-width: 3px;
 }
 
 .border-zinc-300 {
@@ -1106,6 +1118,11 @@ code:not(.code-highlight code) {
   border-left-color: rgb(212 212 216 / var(--tw-border-opacity));
 }
 
+.border-t-zinc-200 {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(228 228 231 / var(--tw-border-opacity));
+}
+
 .border-l-indigo-500 {
   --tw-border-opacity: 1;
   border-left-color: rgb(99 102 241 / var(--tw-border-opacity));
@@ -1124,16 +1141,6 @@ code:not(.code-highlight code) {
 .border-l-red-500 {
   --tw-border-opacity: 1;
   border-left-color: rgb(239 68 68 / var(--tw-border-opacity));
-}
-
-.border-t-zinc-800 {
-  --tw-border-opacity: 1;
-  border-top-color: rgb(39 39 42 / var(--tw-border-opacity));
-}
-
-.border-t-zinc-200 {
-  --tw-border-opacity: 1;
-  border-top-color: rgb(228 228 231 / var(--tw-border-opacity));
 }
 
 .border-opacity-30 {
@@ -1178,31 +1185,6 @@ code:not(.code-highlight code) {
 .bg-zinc-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(161 161 170 / var(--tw-bg-opacity));
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-zinc-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(39 39 42 / var(--tw-bg-opacity));
-}
-
-.bg-neutral-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(23 23 23 / var(--tw-bg-opacity));
-}
-
-.bg-gray-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-}
-
-.bg-zinc-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(24 24 27 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-10 {
@@ -1305,6 +1287,11 @@ code:not(.code-highlight code) {
   padding-right: 1.25rem;
 }
 
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -1333,11 +1320,6 @@ code:not(.code-highlight code) {
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
-}
-
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
 }
 
 .pl-5 {
